# FastAPI

./: .env-non-dev  .gitignore  Dockerfile  README.md  docker-compose.yaml  nginx_config.conf  prometheus.yml  pyproject.toml  pytest.ini  requirements.txt
Auth_service/: .env-non-dev  dockerfile  env  requirements.txt  requirements23.txt
Auth_service/app/: config.py  exceptions.py
app/: config.py  database.py  exceptions.py  logger.py  main.py
app/admin/: views.py
app/booking/: models.py  router.py  schemas.py  service.py
app/hotels/: models.py  router.py  schemas.py  service.py
app/images/: router.py
app/migrations/: env.py
app/rooms/: models.py
app/service/: base.py
app/tasks/: email_templates.py  tasks.py
app/users/: auth.py  (+5 more)
auth_service/: .env-non-dev  alembic.ini  dockerfile  pyproject.toml  requirements.txt
auth_service/app/: config.py  database.py  exceptions.py  main.py
auth_service/app/admin/: auth.py  views.py
auth_service/app/migration/: env.py
auth_service/app/migration/versions/: 15fff38a861e_initial_migration.py  6594e9bc1634_add_session.py  6c90043355a1_add_is_active.py  a8aaa748ac8b_add_refresh_jwt.py  fda3ddaeb4ef_add_column.py
auth_service/app/service/: base.py
auth_service/app/tasks/: celery.py  tasks.py
auth_service/app/users/: dependencies.py  helper.py  models.py  router.py  schemas.py  service.py  utils.py
auth_service/app/users/JWT_session/: models.py  router.py  schemas.py  service.py  utils_jwt.py
bookig_service/: .env-non-dev  Dockerfile  prometheus.yml  pyproject.toml  requirements.txt
docker/: app.sh
(+42 files in other folders)
